--- a/src/style/general.scss
+++ b/src/style/general.scss
@@ -1,3 +1,15 @@
 @use "./partials/variables" as *;
 
 @import "bootstrap/scss/bootstrap";
+
+img {
+    max-width: 100%;
+}
+
+li {
+    list-style-type: none;
+}
+
+a {
+    text-decoration: none;
+}
