Add: Project almost complete (4 mlstones)

--- a/src/style/general.scss
+++ b/src/style/general.scss
@@ -2,7 +2,7 @@
 
 @import "bootstrap/scss/bootstrap";
 @import "/node_modules/flag-icons/css/flag-icons.min.css";
-
+@import "node_modules/@fortawesome/fontawesome-free/css/all.css";
 
 img {
     max-width: 100%;
