--- a/src/style/general.scss
+++ b/src/style/general.scss
@@ -9,9 +9,10 @@ img {
 }
 
 li {
-    list-style-type: none;
+    // list-style-type: none;
 }
 
 a {
     text-decoration: none;
+    color: inherit;
 }
